save today's work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".PhraseDetailActivity"
+            android:name=".activity.SearchGoogleActivity"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
-            android:name=".AboutActivity"
+            android:name=".activity.PhraseDetailActivity"
             android:exported="false"
-            android:hardwareAccelerated="true" />
+            android:screenOrientation="sensor" />
+        <activity
+            android:name=".activity.AboutActivity"
+            android:exported="false"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="sensor" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:hardwareAccelerated="true" />
+            android:hardwareAccelerated="true"
+            android:screenOrientation="sensor" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".activity.SplashActivity"
             android:exported="true"
             android:hardwareAccelerated="true"
+            android:screenOrientation="sensor"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
