--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".activity.SearchGoogleActivity"
+            android:name=".activity.SingleContentActivity"
             android:hardwareAccelerated="true"
             android:screenOrientation="sensor"
             android:exported="false" />
