--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ViewPagerDetailActivity"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="sensor"
+            android:exported="false" />
+        <activity
             android:name=".activity.CategoryDetailActivity"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".activity.SingleContentActivity"
